[package]
name = "multiview-licence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches the rest of the workspace). This lets cargo-deny's
# allow-wildcard-paths exempt the intra-workspace path deps while still denying
# real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
multiview-events = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Exact lease arithmetic тАФ never float. `chrono` here carries the workspace
# `default-features = false` (no `clock`/`std`-time reads): this crate computes
# the ladder over instants HANDED TO IT (the cli samples the wall clock), so the
# pure-data model never reads a system clock itself. The `serde` feature lets the
# dated lease bounds (`DateTime<Utc>`) round-trip in the entitlement resource; the
# `alloc` feature enables RFC 3339 rendering (`Lease::valid_to_rfc3339`) WITHOUT
# pulling the `std`/`clock` system-time reads тАФ so the no-clock-read invariant
# holds. `MIT OR Apache-2.0`, deny-clean, already in the workspace graph.
chrono = { workspace = true, features = ["serde", "alloc"] }
# Ed25519 lease/binding signature VERIFICATION against a pinned public key
# (ADR-0050 ┬з2.5). `MIT OR Apache-2.0`; its closure (`curve25519-dalek`,
# `ed25519`, `signature`, `sha2`, `zeroize`, `subtle`) is `MIT`/`Apache-2.0`/
# `BSD-3-Clause`, all already on the deny.toml allowlist. The library uses ONLY
# the verification path (`VerifyingKey::verify_strict`) тАФ no key generation, no
# RNG, no entropy source in non-test code (data minimisation: this crate never
# mints keys, it checks signatures handed to it). Default features are disabled
# and only `alloc` (for the `Signature`/key parsing surface) is enabled; the
# `rand_core` keygen feature is pulled in dev-dependencies for test keypairs only.
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
# CBOR encode/decode for the local lease lifecycle: the dropped lease/binding
# file (the directory-watcher reads it) and the `<host>.challenge` export (salted
# digests + counters only тАФ data minimisation, brief ┬з3/┬з8). `ciborium` and its
# closure (`ciborium-io`, `ciborium-ll`, `half`) are `Apache-2.0` / `MIT OR
# Apache-2.0`, all already on the deny.toml allowlist; pure Rust, no native deps,
# stays in the CI-green default build. CBOR (RFC 8949) is canonical and compact тАФ
# the portal and the machine agree byte-for-byte on the challenge format.
ciborium = "0.2.2"

[dev-dependencies]
proptest = "1.11.0"
serde_json = { workspace = true }
# Test-only deterministic keypair generation for the Ed25519 verify tests
# (valid / tampered / wrong-key). `rand_core` enables `SigningKey::generate`;
# the non-test library never depends on an RNG.
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[lints]
workspace = true
