[package]
name = "multiview-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Off-by-default `ndi` path ONLY. The proprietary NDI® runtime is resolved at RUN
# time via `NDIlib_v6_load` (never linked/vendored at build time; ADR-0008). All
# the raw `dlopen`/`dlsym` `unsafe` lives in this tiny FFI leaf crate, so
# `multiview-output` stays `forbid(unsafe_code)`. Pulled in ONLY by the `ndi`
# feature, so the default build never links it and `cargo deny`
# (`all-features = false`) never scans it.
multiview-ndi-sys = { workspace = true, optional = true }

# Real libav* encode/mux path — opt-in only behind the `ffmpeg` feature so the
# DEFAULT build stays pure-Rust / native-dep-free. All raw FFI is owned by
# `multiview-ffmpeg`; this crate only calls its SAFE wrappers (it stays
# `unsafe_code = forbid`). `cargo deny check` runs with all-features=false so it
# never sees this opt-in dependency.
multiview-ffmpeg = { workspace = true, optional = true }

# Opt-in alongside `multiview-ffmpeg`, used ONLY to name `ffmpeg-next`'s safe value
# types (`format::Pixel`, the encoded-packet/`Video` frame types) when calling
# `multiview-ffmpeg`'s safe encoder/scaler/muxer wrappers — e.g. naming the
# `yuv420p` working format LGPL software codecs require. This crate writes NO
# `unsafe` and performs NO FFI (it stays `unsafe_code = forbid`); all raw libav*
# remains owned by `multiview-ffmpeg`. Pinned to match its binding. `cargo deny`
# runs with all-features=false so it never sees this opt-in dependency.
ffmpeg-next = { version = "7.1", optional = true }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3"
# Round-trip codec tests ONLY: encode here, decode with multiview-input's TSL
# decoders, asserting encode∘decode == identity on the wire. A DEV-dependency
# only — it never enters the (non-test) crate graph, so the sibling relationship
# (multiview-input and multiview-output do not depend on each other) is preserved.
# multiview-input's default build is pure-Rust (no `ffmpeg`/`ndi` pulled here), so
# the baseline stays native-dep-free. `cargo deny` runs with all-features=false
# and ignores dev-dependencies, so this is invisible to the licence gate.
multiview-input = { workspace = true }
# NOTE: the `ffmpeg`-feature integration tests also use `ffmpeg-next` (to bridge
# demux -> decode when feeding the sinks). It is NOT listed here as a
# dev-dependency on purpose: an unconditional dev-dependency would compile native
# libav* even for the DEFAULT `cargo test` (dev-deps ignore features), breaking
# the pure-Rust baseline. Instead those tests rely on the *optional* `ffmpeg-next`
# dependency above, which is only present (and only buildable) when the `ffmpeg`
# feature is enabled — exactly when the tests that need it are compiled.

[features]
"default" = []
# Wires the real encode-once-mux-many output (FileSink / SegmentSink) onto
# multiview-ffmpeg's safe Encoder/Muxer wrappers. Pulls multiview-ffmpeg with its own
# `ffmpeg` feature; never escalates to GPL (LGPL software codecs only).
"ffmpeg" = ["dep:multiview-ffmpeg", "multiview-ffmpeg/ffmpeg", "dep:ffmpeg-next"]
# License-escalating: forwards multiview-ffmpeg's `gpl-codecs` so a sink may target
# the GPL software encoders (libx264/libx265). Enabling this makes the whole
# build GPL; it is NEVER pulled in by `ffmpeg` alone and never enters the default
# (LGPL-clean) build. Implies `ffmpeg` (the sinks need the real encode path).
"gpl-codecs" = ["ffmpeg", "multiview-ffmpeg/gpl-codecs"]
# NVENC hardware-encoder selection (compile-only here; no native crate). Forwards
# multiview-ffmpeg's `cuda` so the codec selector may consider h264_nvenc/hevc_nvenc.
# Implies `ffmpeg` (selection's run-time probe needs libav).
"cuda" = ["ffmpeg", "multiview-ffmpeg/cuda"]
# Proprietary NDI® output (ADR-0008). OFF by default and LICENSE-ISOLATING: it is
# NOT part of the `full` preset and is requested explicitly. Pulls the
# `multiview-ndi-sys` FFI leaf crate, which resolves the NDI runtime at RUN time
# via `NDIlib_v6_load` — NOTHING is linked or vendored at build time, so both the
# default build AND this `ndi` build compile and link WITHOUT the SDK present. NDI
# I/O additionally stays inert until an operator accepts the runtime license gate
# (see `crate::ndi::NdiLicense`).
"ndi" = ["dep:multiview-ndi-sys"]

[lints]
workspace = true
